syntax = "proto3";

package kvstore;

message LogEntry {
  enum Operation {
    PUT = 0;
    DELETE = 1;
  }
  Operation op = 1;
  string key = 2;
  bytes value = 3;     // bytes is for arbitrary data
  int64 timestamp = 4; // debugging purposes
}